<resources>
    <string name="app_name">Prices War</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="list_title">List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_close_session">Close Session</string>
    <string name="saveCredentials">Remember Me?</string>
    <string name="help">Help</string>
    <string name="my_places">My Places</string>
    <string name="add_place">Add Place</string>
    <string name="map">Map</string>
</resources>