<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/baseline_beenhere_black_18dp"
            android:title="@string/my_places" />
        <item
            android:id="@+id/nav_new_place"
            android:icon="@drawable/baseline_add_location_black_18dp"
            android:title="@string/add_place" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_black_18dp"
            android:title="@string/map" />
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>

    <item android:title="Communicate">
        <menu>
            <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="Share" />-->
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/baseline_help_black_18dp"
                android:title="@string/help" />
        </menu>
    </item>

</menu>