<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="52sp"/>

        <EditText
            style="@style/GreyEditText"
            android:id="@+id/user_et"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            />

        <EditText
            style="@style/GreyEditText"
            android:id="@+id/password_et"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            />

        <Button
            android:id="@+id/login_btn"
            android:text="@string/login_title"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:textAllCaps="false"

            />
    </LinearLayout>
</FrameLayout>

